Add MixinTweaker to manifest

--- a/build.gradle
+++ b/build.gradle
@@ -82,3 +82,12 @@ shadowJar {
 mixin {
     add sourceSets.main, "mixins.animationcontrol.refmap.json"
 }
+
+jar {
+    manifest {
+        attributes(
+            'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
+            'TweakOrder': 0
+        )
+    }
+}
